--- a/input/index.html
+++ b/input/index.html
@@ -11,7 +11,7 @@
     <div class="container-fluid">
 
         <div class="page-header">
-            <h1>Page Scraper <br/><small>Returns number of 'mentions' for your search term, on a specific website.</small></h1>
+            <h1>Tweet counter <br/><small>Returns number of tweets that contain your search query</small></h1>
         </div>
 
         <form role="form">
