use id instead of keyword as key

--- a/input/index.html
+++ b/input/index.html
@@ -19,6 +19,10 @@
                 <label for="searchQuery">Search Query</label>
                 <input class="form-control" id="searchQuery" placeholder="Enter search text">
             </div>
+            <div class="form-group">
+                <label for="retweets">Include Retweets</label>
+                <input class="form-control" id="retweets" type="checkbox" checked>
+            </div>
             <button type="button" class="btn btn-default" onclick="compileObject()">Done</button>
         </form>
 
